--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +204,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(soccer_match)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,9 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Information about soccer_match\n",
+      "Type: <class 'list'>\n",
+      "Length: 2\n",
+      "\n",
+      "Information about soccer_match[0]:\n",
+      "Type: <class 'dict'>\n",
+      "Length: 8\n",
+      "Keys: dict_keys(['home_team', 'away_team', 'country', 'num_passes', 'passes_completed', 'fouls_committed', 'colors', 'players'])\n",
+      "Values: dict_values([False, True, 'Australia', 390, 332, 19, ['green', 'gold'], [{'name': 'Mathew RYAN', 'captain': False, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Mark MILLIGAN', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}, {'name': 'Mathew LECKIE', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}, {'name': 'Robbie KRUSE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}, {'name': 'Andrew NABBOUT', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}, {'name': 'Aaron MOOY', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}, {'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}, {'name': 'Aziz BEHICH', 'captain': False, 'shirt_number': 16, 'position': 'Defender'}, {'name': 'Joshua RISDON', 'captain': False, 'shirt_number': 19, 'position': 'Defender'}, {'name': 'Trent SAINSBURY', 'captain': False, 'shirt_number': 20, 'position': 'Defender'}, {'name': 'Tom ROGIC', 'captain': False, 'shirt_number': 23, 'position': 'Midfield'}]])\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "\n",
@@ -256,15 +292,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries = []\n",
     "\n",
     "# Your code here\n",
     "\n",
     "countries # ['France', 'Australia']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['France', 'Australia']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries = []\n",
+    "for match in soccer_match:\n",
+    "    countries.append(match[\"country\"])\n",
+    "    #countries.append(soccer_match[1][\"country\"])\n",
+    "   # break\n",
+    "countries"
    ]
   },
   {
@@ -280,15 +352,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "colors = []\n",
     "\n",
     "# Your code here\n",
     "\n",
     "colors # ['blue', 'white', 'red', 'green', 'gold']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['blue', 'white', 'red', 'green', 'gold']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colors = []\n",
+    "for match in soccer_match:\n",
+    "    for color in match[\"colors\"]:\n",
+    "        colors.append(color)\n",
+    "       \n",
+    "colors"
    ]
   },
   {
@@ -302,15 +410,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "players = []\n",
     "\n",
     "# Your code here\n",
     "\n",
     "print(players) # [{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Benjamin PAVARD',...}, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Hugo LLORIS', 'captain': True, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Benjamin PAVARD', 'captain': False, 'shirt_number': 2, 'position': 'Defender'}, {'name': 'Raphael VARANE', 'captain': False, 'shirt_number': 4, 'position': 'Defender'}, {'name': 'Samuel UMTITI', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}, {'name': 'Paul POGBA', 'captain': False, 'shirt_number': 6, 'position': 'Midfield'}, {'name': 'Antoine GRIEZMANN', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}, {'name': 'Kylian MBAPPE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}, {'name': 'Ousmane DEMBELE', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}, {'name': 'Corentin TOLISSO', 'captain': False, 'shirt_number': 12, 'position': 'Midfield'}, {'name': 'Ngolo KANTE', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}, {'name': 'Lucas HERNANDEZ', 'captain': False, 'shirt_number': 21, 'position': 'Defender'}, {'name': 'Mathew RYAN', 'captain': False, 'shirt_number': 1, 'position': 'Goalie'}, {'name': 'Mark MILLIGAN', 'captain': False, 'shirt_number': 5, 'position': 'Defender'}, {'name': 'Mathew LECKIE', 'captain': False, 'shirt_number': 7, 'position': 'Forward'}, {'name': 'Robbie KRUSE', 'captain': False, 'shirt_number': 10, 'position': 'Forward'}, {'name': 'Andrew NABBOUT', 'captain': False, 'shirt_number': 11, 'position': 'Forward'}, {'name': 'Aaron MOOY', 'captain': False, 'shirt_number': 13, 'position': 'Midfield'}, {'name': 'Mile JEDINAK', 'captain': True, 'shirt_number': 15, 'position': 'Midfield'}, {'name': 'Aziz BEHICH', 'captain': False, 'shirt_number': 16, 'position': 'Defender'}, {'name': 'Joshua RISDON', 'captain': False, 'shirt_number': 19, 'position': 'Defender'}, {'name': 'Trent SAINSBURY', 'captain': False, 'shirt_number': 20, 'position': 'Defender'}, {'name': 'Tom ROGIC', 'captain': False, 'shirt_number': 23, 'position': 'Midfield'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "players = []\n",
+    "for match in soccer_match:\n",
+    "    for player in match[\"players\"]:\n",
+    "        players.append(player)\n",
+    "    #players.append(soccer_match[1][\"players\"])\n",
+    "    #break\n",
+    "\n",
+    "print(players)"
    ]
   },
   {
@@ -326,9 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "captains = []\n",
     "\n",
@@ -346,6 +497,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Mile JEDINAK',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 15,\n",
+       "  'position': 'Midfield'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "captains = []\n",
+    "for match in soccer_match:\n",
+    "    for player in match[\"players\"]:\n",
+    "       if player[\"captain\"] == True:\n",
+    "         captains.append(player)\n",
+    "captains"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -358,9 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "home_team_players = []\n",
     "\n",
@@ -380,6 +574,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'home_team': True,\n",
+       "  'away_team': False,\n",
+       "  'country': 'France',\n",
+       "  'num_passes': 484,\n",
+       "  'passes_completed': 423,\n",
+       "  'fouls_committed': 16,\n",
+       "  'colors': ['blue', 'white', 'red'],\n",
+       "  'players': [{'name': 'Hugo LLORIS',\n",
+       "    'captain': True,\n",
+       "    'shirt_number': 1,\n",
+       "    'position': 'Goalie'},\n",
+       "   {'name': 'Benjamin PAVARD',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 2,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Raphael VARANE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 4,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Samuel UMTITI',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 5,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Paul POGBA',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 6,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Antoine GRIEZMANN',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 7,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Kylian MBAPPE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 10,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Ousmane DEMBELE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 11,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Corentin TOLISSO',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 12,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Ngolo KANTE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 13,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Lucas HERNANDEZ',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 21,\n",
+       "    'position': 'Defender'}]}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "home_team_players = []\n",
+    "for match in soccer_match:\n",
+    "    if match ['home_team'] == True:\n",
+    "     home_team_players.append(match)   \n",
+    "home_team_players"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -390,15 +658,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'home_team': True,\n",
+       "  'away_team': False,\n",
+       "  'country': 'France',\n",
+       "  'num_passes': 484,\n",
+       "  'passes_completed': 423,\n",
+       "  'fouls_committed': 16,\n",
+       "  'colors': ['blue', 'white', 'red'],\n",
+       "  'players': [{'name': 'Hugo LLORIS',\n",
+       "    'captain': True,\n",
+       "    'shirt_number': 1,\n",
+       "    'position': 'Goalie'},\n",
+       "   {'name': 'Benjamin PAVARD',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 2,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Raphael VARANE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 4,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Samuel UMTITI',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 5,\n",
+       "    'position': 'Defender'},\n",
+       "   {'name': 'Paul POGBA',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 6,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Antoine GRIEZMANN',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 7,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Kylian MBAPPE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 10,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Ousmane DEMBELE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 11,\n",
+       "    'position': 'Forward'},\n",
+       "   {'name': 'Corentin TOLISSO',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 12,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Ngolo KANTE',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 13,\n",
+       "    'position': 'Midfield'},\n",
+       "   {'name': 'Lucas HERNANDEZ',\n",
+       "    'captain': False,\n",
+       "    'shirt_number': 21,\n",
+       "    'position': 'Defender'}]}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "away_team_forwards = []\n",
-    "\n",
-    "# Your code here\n",
-    "\n",
-    "away_team_forwards\n",
+    "Away_team_fowards = []\n",
+    "# your code here\n",
+    "home_team_players\n",
     "# [{'name': 'Mathew LECKIE',\n",
     "#   'captain': False,\n",
     "#   'shirt_number': 7,\n",
@@ -411,6 +738,45 @@
     "#   'captain': False,\n",
     "#   'shirt_number': 11,\n",
     "#   'position': 'Forward'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Mathew LECKIE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Robbie KRUSE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Andrew NABBOUT',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Away_team_fowards = []\n",
+    "for match in soccer_match:\n",
+    "    if match ['away_team'] == True:\n",
+    "     for player in match[\"players\"]:\n",
+    "        if player['position'] == 'Forward':\n",
+    "           Away_team_fowards.append(player) \n",
+    "\n",
+    "Away_team_fowards\n",
+    "#home_team_players"
    ]
   },
   {
@@ -438,6 +804,66 @@
     "#  'captain': False,\n",
     "#  'shirt_number': 23,\n",
     "#  'position': 'Midfield'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Lucas HERNANDEZ',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 21,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Tom ROGIC',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 23,\n",
+       "  'position': 'Midfield'}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_with_highest_num =[] \n",
+    "for match in soccer_match:\n",
+    "    for player in match[\"players\"]:\n",
+    "        if player['shirt_number'] > 20:\n",
+    "           player_with_highest_num.append(player) \n",
+    "player_with_highest_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Hugo LLORIS',\n",
+       " 'captain': True,\n",
+       " 'shirt_number': 1,\n",
+       " 'position': 'Goalie'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_with_highest_num = None\n",
+    "for match in soccer_match:\n",
+    "    for player in match[\"players\"]:\n",
+    "        if player_with_highest_num == None:\n",
+    "          player_with_highest_num = player\n",
+    "player_with_highest_num"
    ]
   },
   {
@@ -482,6 +908,53 @@
     "#  'Joshua Risdon',\n",
     "#  'Trent Sainsbury',\n",
     "#  'Tom Rogic']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hugo Lloris',\n",
+       " 'Benjamin Pavard',\n",
+       " 'Raphael Varane',\n",
+       " 'Samuel Umtiti',\n",
+       " 'Paul Pogba',\n",
+       " 'Antoine Griezmann',\n",
+       " 'Kylian Mbappe',\n",
+       " 'Ousmane Dembele',\n",
+       " 'Corentin Tolisso',\n",
+       " 'Ngolo Kante',\n",
+       " 'Lucas Hernandez',\n",
+       " 'Mathew Ryan',\n",
+       " 'Mark Milligan',\n",
+       " 'Mathew Leckie',\n",
+       " 'Robbie Kruse',\n",
+       " 'Andrew Nabbout',\n",
+       " 'Aaron Mooy',\n",
+       " 'Mile Jedinak',\n",
+       " 'Aziz Behich',\n",
+       " 'Joshua Risdon',\n",
+       " 'Trent Sainsbury',\n",
+       " 'Tom Rogic']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_names = []\n",
+    "for match in soccer_match:\n",
+    "    for player in match[\"players\"]:\n",
+    "        #for name in player['name']:\n",
+    "          player_names.append(player['name'].title())\n",
+    "\n",
+    "player_names"
    ]
   },
   {
